# embedded_object_detection

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: zmq.hpp
src/: aws_client.cpp  object_detect.cpp
src/util/: min.cpp  zeromq_test.py
